Fix layout issues for ionic and versa 2 on sdk 4.0

--- a/resources/layout.css
+++ b/resources/layout.css
@@ -31,8 +31,7 @@
 
 #weekday {
   text-anchor: middle;
-  /* Make it centered with #dayOfMonth */
-  x: 11%+2;
+  x: 11%;
   y: 20;
 }
 
